--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Chose your dod</title>
+    <title>Chose your dog</title>
     <link href="/src/assets/favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
