it works, but looks awful

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Chose your dog</title>
     <link href="/src/assets/favicon.ico" rel="icon" type="image/x-icon" />
   </head>
-  <body>
+  <body style="margin: 0">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
